--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/Carlcro/face-clone-api#readme",
   "dependencies": {
+    "bcrypt": "^3.0.4",
     "express": "^4.16.4",
     "joi": "^14.3.1",
+    "joi-objectid": "^2.0.0",
+    "lodash": "^4.17.11",
     "mongoose": "^5.4.13"
   }
 }
