--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
   "homepage": "https://github.com/Carlcro/face-clone-api#readme",
   "dependencies": {
     "bcrypt": "^3.0.4",
+    "config": "^3.0.1",
     "express": "^4.16.4",
+    "express-async-errors": "^3.1.1",
     "joi": "^14.3.1",
     "joi-objectid": "^2.0.0",
+    "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
-    "mongoose": "^5.4.13"
+    "mongoose": "^5.4.13",
+    "winston": "^3.2.1",
+    "winston-mongodb": "^4.0.3"
   }
 }
