--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "face-clone-api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Carlcro/face-clone-api.git"
+  },
+  "engines": {
+    "node": "10.15.1"
   },
   "keywords": [],
   "author": "",
@@ -19,11 +23,13 @@
   "homepage": "https://github.com/Carlcro/face-clone-api#readme",
   "dependencies": {
     "bcrypt": "^3.0.4",
+    "compression": "^1.7.3",
     "config": "^3.0.1",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-async-errors": "^3.1.1",
     "fawn": "^2.1.5",
+    "helmet": "^3.15.1",
     "joi": "^14.3.1",
     "joi-objectid": "^2.0.0",
     "jsonwebtoken": "^8.4.0",
